Panel: fix 1px gap of window buttons to the right

--- a/teamapps-client/less/components/UiPanel.less
+++ b/teamapps-client/less/components/UiPanel.less
@@ -40,7 +40,7 @@
     border-top-left-radius: calc(var(--ta-border-radius) - 1px);
     border-top-right-radius: calc(var(--ta-border-radius) - 1px);
     border-bottom: 1px solid var(--ta-inner-border-color);
-    padding: 0 1px 0 8px;
+    padding: 0 0 0 8px;
     background-color: var(--ta-bg-color-semi-transparent);
 
     .optimized-for-touch & {
